fix: add show props to control visibility of the action menu

--- a/src/components/ActionMenu/ActionMenu.module.scss
+++ b/src/components/ActionMenu/ActionMenu.module.scss
@@ -1,7 +1,7 @@
 @import '../../shared-styles/mixin.scss';
 
 .container {
-  background-color: var(--primary-bg);
+  background-color: var(--sec-bg);
   border-radius: 8px;
   display: flex;
   flex-direction: column;
@@ -9,6 +9,11 @@
   margin: 0;
   padding: rem(5px) rem(0px);
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+  display: none;
+
+  &.show {
+    display: block;
+  }
 
   >li {
     font-size: rem(14px);
@@ -16,7 +21,7 @@
     padding: rem(10px) rem(20px);
 
     &:hover {
-      background-color: var(--sec-bg);
+      background-color: var(--primary-bg);
     }
   }
 }
